fix overflow

--- a/assets/css/style-custom.css
+++ b/assets/css/style-custom.css
@@ -1,8 +1,8 @@
 html,body
-{
-    width: 100%;
+{   width: 100%;
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden; 
 }
 
 ul{
